# Computational-Agroecology

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  action.cc  action.h  location.h  plant.cpp  plant.h  weather.cpp  weather.h
environment/: CMakeLists.txt  Makefile  README.md  climate.cc  climate.h  config.cc  config.h  coordinate.cc  coordinate.h  energy_balance.cc  energy_balance.h  environment.cc  environment.h  grow.cc  grow.h  light.cc  light.h  location.cc  location.h  location.h.gch  main  main.cc  meteo_info.cc  meteo_info.h  meteorology.cc  meteorology.h  photosynthesis.cc  photosynthesis.h  plant.cc  plant.h  plant_builder.cc  plant_builder.h  plant_container.cc  plant_container.h  plant_radiation.cc  plant_radiation.h  plant_radiation_info.cc  plant_radiation_info.h  produce.cc  produce.h  (+18 more)
environment/agent/: CMakeLists.txt  agent.cc  agent.h  q_learning.cc  q_learning.h  resource.h
environment/agent/actions/: action.cc  action.h  crop.cc  crop.h
environment/data/: db_connected.cpp  plant_connector.cc  plant_connector.h  plant_data_connector.cc  plant_data_connector.h
environment/main/: CMakeLists.txt
environment/plant_types/: CMakeLists.txt  bean.cc  bean.h  corn.cc  corn.h  plant_type.cc  plant_type.h  plant_type_set.h  squash.cc  squash.h
environment/plants/: bean.cc  bean.h
environment/simulators/: CMakeLists.txt  grow_simulator.cc  grow_simulator.h  main_simulator.cc  main_simulator.h  photon_simulator.cc  photon_simulator.h  resource.h  simulator.h  sun.cpp  sun.h  sun_simulator.cc  sun_simulator.h
environment/simulators/actions/: CMakeLists.txt  action.cc  action.h  crop.cc  crop.h
environment/simulators/grow_simulator/: objgrow.cc  objgrow.h  plantroot.h
environment/simulators/photon_simulator/: CMakeLists.txt  README.md  photon_simulator_config.h  vectors.cc  vectors.cpp  vectors.h  vectors.hpp
environment/simulators/photon_simulator/asset/: Corn.mtl
environment/simulators/photon_simulator/ext/: CMakeLists.txt
environment/simulators/photon_simulator/loader/: CMakeLists.txt  stb_image.h  tiny_obj_loader.h
environment/simulators/photon_simulator/model/: CMakeLists.txt  face.cc  face.h  material.h  mesh.cc  mesh.h  model.cc  model.h
environment/simulators/photon_simulator/photon/: CMakeLists.txt  neighbor.cpp  neighbor.h  photon.cpp  photon.h
environment/simulators/photons/: photon_simulator_config.h  vectors.h
environment/simulators/photons/asset/: Squash.mtl  Squash.tga
environment/simulators/photons/model/: face.cc  face.h  material.h  mesh.cc  mesh.h  model.cc  model.h
environment/simulators/photons/photon/: neighbor.cc  neighbor.h  photon.cc  photon.h
environment/tests/: CMakeLists.txt  climate_test.cc  config_test.cc  environment_test.cc  light_test.cc  location_test.cc  plant_test.cc  soil_test.cc  terrain_test.cc  utility_test.cc  weather_test.cc
environment/tests/agent/: agent_test.cc  qlearning_test.cc
environment/tests/data/: plant_connector_test.cc
environment/tests/plant_types/: bean_test.cc  corn_test.cc  plant_type_test.cc  squash_test.cc
environment/tests/plants/: bean_test.cc
environment/tests/simulators/: main_simulator_test.cc  sun_simulator_test.cc
environment/tests/simulators/actions/: crop_test.cc
environment/tests/simulators/photon_simulator/: photon_simulator_model_test.cc
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  actionTests  cmake_install.cmake  configTests  config_test.cc  dataReader.cpp  dataReaderTests  location_test.cc  plant.cpp  plantClassifier.cpp  plantClassifierTests  plantIndexTests  plantIndexTests.cpp  plantTests  plant_adapter.cpp  plant_index.cpp  simulatorRunTests  simulator_run.cpp  soilTests.cpp  terrain.cpp  terrainTests  terrain_test.cpp  utility_test.cc  weatherTests  weatherTests.cpp  weather_test.cc
tests/agent/: agent_test.cc  qlearning_test.cc
tests/agent/actions/: crop_test.cc
tests/agent_server/: agent_server_test.cc  message_convertor_test.cc
tests/config/: config_test.cc  location_test.cc
tests/environment/: climate_test.cc  config_test.cc  environment_test.cc  location_test.cc  meteo_info_test.cc  meteorology_test.cc  plant_container_test.cc  plant_test.cc  soil_test.cc  sun_info_test.cc  terrain_test.cc  utility_test.cc  weather_test.cc
tests/environment/plant_types/: bean_test.cc  corn_test.cc  squash_test.cc
tests/environment/plants/: bean_test.cc
tests/simulators/: main_simulator_test.cc  sun_simulator_test.cc
tests/simulators/actions/: crop_test.cc
tests/simulators/photon_simulator/: photon_simulator_model_test.cc
tests/simulators/photons/: photon_simulator_model_test.cc
tests/util/: max_min_pair_test.cc
viz/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Makefile  Project.sln  Rendering_Control.cpp  Rendering_Control.h  Rendering_Grids.cpp  Rendering_Grids.h  Rendering_Plants.cpp  Rendering_Plants.h  Rendering_Weather.cpp  Rendering_Weather.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp  main.h  map_control.cpp  map_control.h  opengl  photon.cpp  photon.h  photon.vcxproj  photon.vcxproj.filters  photon_control.cpp  photon_control.h  stb_image.h  stdafx.h  tiny_obj_loader.h
viz/Debug/: photon.ilk
viz/common/: CMakeLists.txt  common.vcxproj  common.vcxproj.filters  stdafx.h  vectors.cpp  vectors.hpp
viz/common/Debug/: common.lib
viz/glut/lib/: freeglut_staticd.lib  freeglutd.exp  freeglutd.lib
viz/input/: Box.max  Corn.tga  Corn1.max  Corn1.mtl  Corn2.max  Corn2.mtl  Corn3.max  Corn3.mtl  Heart.mtl  Squash.3DS  Squash.max  Squash1.mtl  Squash2.mtl  Squash3.mtl  box.mtl  box_big.mtl  box_small.mtl
viz/loader/: loader.vcxproj  loader.vcxproj.filters  tiny_obj_loader.cc  tiny_obj_loader.h
viz/loader/Debug/: loader.lib
viz/model/: Corn1.mtl  Corn2.mtl  Corn3.mtl  Squash1.mtl  Squash2.mtl  Squash3.mtl  face.cpp  face.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  model.vcxproj  model.vcxproj.filters
viz/model/Debug/: model.lib
viz/photon.dir/Debug/photon.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+7 more)
(+213 files in other folders)
