cmake_minimum_required(VERSION 3.0)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_BUILD_TYPE Debug)

include_directories(".")
add_subdirectory(plant_types)
add_subdirectory(simulators)
add_subdirectory(main)
aux_source_directory(. DIR_ENVIRONMENT_SRCS)

add_executable(environment_main ${DIR_ENVIRONMENT_SRCS})
target_link_libraries(environment_main plant_types simulators main)

add_subdirectory(tests)
add_executable(environment_tests_simulators_sun_simulator ${DIR_ENVIRONMENT_SRCS})
add_executable(environment_tests_simulators_main_simulator ${DIR_ENVIRONMENT_SRCS})
add_executable(environment_tests_climate ${DIR_ENVIRONMENT_SRCS})
add_executable(environment_tests_config ${DIR_ENVIRONMENT_SRCS})
add_executable(environment_tests_environment ${DIR_ENVIRONMENT_SRCS})
add_executable(environment_tests_location ${DIR_ENVIRONMENT_SRCS})
add_executable(environment_tests_plant ${DIR_ENVIRONMENT_SRCS})
add_executable(environment_tests_soil ${DIR_ENVIRONMENT_SRCS})
add_executable(environment_tests_terrain ${DIR_ENVIRONMENT_SRCS})
add_executable(environment_tests_utility ${DIR_ENVIRONMENT_SRCS})
add_executable(environment_tests_weather ${DIR_ENVIRONMENT_SRCS})

target_link_libraries(environment_tests_simulators_sun_simulator plant_types simulators tests_simulators_sun_simulator)
target_link_libraries(environment_tests_simulators_main_simulator plant_types simulators tests_simulators_main_simulator)
target_link_libraries(environment_tests_climate plant_types simulators tests_climate)
target_link_libraries(environment_tests_config plant_types simulators tests_config)
target_link_libraries(environment_tests_environment plant_types simulators tests_environment)
target_link_libraries(environment_tests_location plant_types simulators tests_location)
target_link_libraries(environment_tests_plant plant_types simulators tests_plant)
target_link_libraries(environment_tests_soil plant_types simulators tests_soil)
target_link_libraries(environment_tests_terrain plant_types simulators tests_terrain)
target_link_libraries(environment_tests_utility plant_types simulators tests_utility)
target_link_libraries(environment_tests_weather plant_types simulators tests_weather)
