if(CMAKE_SYSTEM_NAME MATCHES "Windows")
	include_directories(${CMAKE_CURRENT_SOURCE_DIR}/gtest/include)
	add_library( gtestd MODULE IMPORTED )
	set_target_properties( gtestd PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/gtest/lib/gtestd.lib )

	add_library( gtest_maind MODULE IMPORTED )
	set_target_properties( gtest_maind PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/gtest/lib/gtest_maind.lib )
else ()
	enable_testing()
	find_package(GTest REQUIRED)
endif()

add_library(tests_simulators_sun_simulator ./simulators/sun_simulator_test.cc)
add_library(tests_simulators_main_simulator ./simulators/main_simulator_test.cc)
add_library(tests_climate climate_test.cc)
add_library(tests_config config_test.cc)
add_library(tests_environment environment_test.cc)
add_library(tests_location location_test.cc)
add_library(tests_plant plant_test.cc)
add_library(tests_soil soil_test.cc)
add_library(tests_terrain terrain_test.cc)
add_library(tests_utility utility_test.cc)
add_library(tests_weather weather_test.cc)

if(CMAKE_SYSTEM_NAME MATCHES "Windows")
	target_link_libraries(tests_simulators_sun_simulator gtestd gtest_maind)
	target_link_libraries(tests_simulators_main_simulator gtestd gtest_maind)
	target_link_libraries(tests_climate gtestd gtest_maind)
	target_link_libraries(tests_config gtestd gtest_maind)
	target_link_libraries(tests_environment gtestd gtest_maind)
	target_link_libraries(tests_location gtestd gtest_maind)
	target_link_libraries(tests_plant gtestd gtest_maind)
	target_link_libraries(tests_soil gtestd gtest_maind)
	target_link_libraries(tests_terrain gtestd gtest_maind)
	target_link_libraries(tests_utility gtestd gtest_maind)
	target_link_libraries(tests_weather gtestd gtest_maind)
else ()
	target_link_libraries(tests_simulators_sun_simulator GTest::GTest GTest::Main)
	target_link_libraries(tests_simulators_main_simulator GTest::GTest GTest::Main)
	target_link_libraries(tests_climate GTest::GTest GTest::Main)
	target_link_libraries(tests_config GTest::GTest GTest::Main)
	target_link_libraries(tests_environment GTest::GTest GTest::Main)
	target_link_libraries(tests_location GTest::GTest GTest::Main)
	target_link_libraries(tests_plant GTest::GTest GTest::Main)
	target_link_libraries(tests_soil GTest::GTest GTest::Main)
	target_link_libraries(tests_terrain GTest::GTest GTest::Main)
	target_link_libraries(tests_utility GTest::GTest GTest::Main)
	target_link_libraries(tests_weather GTest::GTest GTest::Main)
endif()